image stretching fixed

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ div.my-dp img{
     width: 220px;
     height: 220px;
     border-radius: 110px;
+    object-fit: cover;
 }
 .project_section{
     height: auto;
@@ -180,6 +181,7 @@ div.my-dp img{
     width: 300px;
     height: 300px;
     border-radius: 50%;
+    object-fit: cover;
 }
 .prj h3 , p{
     margin: 10px;
